Fixed small errors in Lecture 02 and 03

--- a/Tutorium02/sections/VollstaendigeInduktion.tex
+++ b/Tutorium02/sections/VollstaendigeInduktion.tex
@@ -65,13 +65,13 @@
     \frametitle{Vollständige Induktion}
     Lösungen zu 1:
         \begin{itemize}
-            \vfill $\sum_{i=1}^{n} i^2 + (n+1)^2 = \frac{(n+1)(n+2)(2n+3)}{6}$
+            \vfill \item $\sum_{i=1}^{n} i^2 + (n+1)^2 = \frac{(n+1)(n+2)(2n+3)}{6}$
             \vfill \item Durch Einsetzen der IV erhalten wir:
-            \vfill $\frac{n(n+1)(2n+1)}{6} + (n+1)^2 = \frac{(n+1)(n+2)(2n+3)}{6} $
-            \vfill $\frac{n(n+1)(2n+1)}{6} + \frac{((n+1)^2)6}{6} = \frac{(n+1)(n+2)(2n+3)}{6}$
-            \vfill $\frac{n(n+1)(2n+1) + ((n+1)^2)6}{6} = \frac{(n+1)(n+2)(2n+3)}{6}$
+            \newline $\frac{n(n+1)(2n+1)}{6} + (n+1)^2 = \frac{(n+1)(n+2)(2n+3)}{6} $
+            \newline $\frac{n(n+1)(2n+1)}{6} + \frac{((n+1)^2)6}{6} = \frac{(n+1)(n+2)(2n+3)}{6}$
+            \newline$\frac{n(n+1)(2n+1) + ((n+1)^2)6}{6} = \frac{(n+1)(n+2)(2n+3)}{6}$
             \vfill \item Aufloesen ergibt:
-            \vfill $\frac{2n^3 + 9n^2 + 13n + 6}{6} = \frac{2n^3 + 9n^2 + 13n + 6}{6} \blacksquare$
+            \newline $\frac{2n^3 + 9n^2 + 13n + 6}{6} = \frac{2n^3 + 9n^2 + 13n + 6}{6} \blacksquare$
         \end{itemize}
 
 \end{frame}
@@ -81,13 +81,13 @@
     Lösungen zu 2:
         \begin{itemize}
             \vfill \item Induktionsanfang:
-            \vfill \newline $\sum_{i=1}^{1} 2*1-1 = 1^2$
+            \newline $\sum_{i=1}^{1} 2*1-1 = 1^2$
             \vfill \item Induktionsvoraussetzung:
-            \vfill \newline $\sum_{i=1}^{n} (2*i-1) = n^2$
+            \newline $\sum_{i=1}^{n} (2*i-1) = n^2$
             \vfill \item Induktionsschritt:
-            \vfill \newline $\sum_{i=1}^{n+1} (2*i-1) = (n+1)^2$
-            \vfill \newline $\sum_{i=1}^{n} (2*i-1)+(2(n+1)-1) = (n+1)^2$
-            \vfill \newline $\sum_{i=1}^{n} (2*i-1)+(2n+1) = (n+1)^2$
+            \newline $\sum_{i=1}^{n+1} (2*i-1) = (n+1)^2$
+            \newline $\sum_{i=1}^{n} (2*i-1)+(2(n+1)-1) = (n+1)^2$
+            \newline $\sum_{i=1}^{n} (2*i-1)+(2n+1) = (n+1)^2$
         \end{itemize}
 
 \end{frame}
@@ -97,8 +97,9 @@
     Lösungen zu 2:
         \begin{itemize}
             \vfill \item Durch Einsetzen der IV erhalten wir:
-            \vfill \newline $n^2+(2n+1) = (n+1)^2$
+            \newline $n^2+(2n+1) = (n+1)^2$
             \vfill \item Aufloesen ergibt:
-            \vfill \newline $n^2+2n+1 = n^2 + 2n + 1 \blacksquare$
+            \newline $n^2+2n+1 = n^2 + 2n + 1 \blacksquare$
         \end{itemize}
+		
 \end{frame}
