--- a/Tutorium04/sections/MatrixMulti.tex
+++ b/Tutorium04/sections/MatrixMulti.tex
@@ -138,7 +138,7 @@ Regeln:
 \item $(AB)^{-1} = A^{-1}B^{-1}$
 \item $(kA)^{-1} = k^{-1}A^{-1}$ k Skalar mit $k\neq0$
 \item $(A^T)^{-1} = (A^{-1})^T$
-\item $A^{-1} = (A^{-1})^{-1}$
+\item $A = (A^{-1})^{-1}$
 \end{itemize}
 \end{frame}
 
@@ -185,7 +185,7 @@ Lösung: Ja; Gesucht Matrix $B = \begin{pmatrix} a & b \\ c & d \end{pmatrix}$
 $B = \frac{1}{-12}\begin{pmatrix} 2 & -4 \\ -4 & 2 \end{pmatrix}$
 \item Ist Matrix $B = \begin{pmatrix} 1 & 2 & 3 \\ 4 & 5 & 6 \end{pmatrix}$ regulär? Nein, da nicht quadratisch
 \item  Ist Matrix $C = \begin{pmatrix} 12 & 4 \\ 0 & 0  \end{pmatrix}$ regulär?
-Lösung: Nein denn Determinante $\neq 0$.
+Lösung: Nein denn Determinante $= 0$.
 \end{enumerate}
 \end{frame}
 
