--- a/Tutorium06/sections/Eigenwerte.tex
+++ b/Tutorium06/sections/Eigenwerte.tex
@@ -69,7 +69,7 @@
     \frametitle{Berechnung der Eigenvektoren}
     \begin{itemize}
         \item Zu jedem Eigenwert gibt es eigene Eigenvektoren
-        \item Diese sind zu denen der anderen linear unabhängig
+        \item Diese sind zu denen der Anderen linear unabhängig
     \end{itemize}
     Eigenvektor zu $\lambda _{i}$ ist Lösung der Gleichung $(A - \lambda _{i} I) \vec{u} = \vec{0}$
     $(\begin{pmatrix}
