--- a/Tutorium06/sections/RangKernBild.tex
+++ b/Tutorium06/sections/RangKernBild.tex
@@ -50,9 +50,9 @@
 		\end{pmatrix} \\
 		\leftrightarrow
 		\begin{pmatrix}
-			1 & -2 & 1 \\
-			0 & 4 & -7 \\
-			0 & 0 & \frac{23}{2} \\
+			1 & 0 & 0 \\
+			0 & 1 & 0 \\
+			0 & 0 & 1 \\
 			0 & 0 & 0
 		\end{pmatrix} 
 	\end{align*}
@@ -276,8 +276,10 @@
             1 & 2 & 3 \\
             0 & -3 & -6 \\
             0 & 0 & 0
-        \end{pmatrix} \Rightarrow$ $v_1 + 2v_2 + 3v_3 = 0$ und $-3v_2 -6v3 = 0$
-		\item also ein LGS mit 2 Gleichungen und 3 Unbekannten $\rightarrow$ unendlich viele Lösungen
+        \end{pmatrix} 
+		
+		\Rightarrow$ $v_1 + 2v_2 + 3v_3 = 0$ und $-3v_2 -6v3 = 0$
+		\item also ein LGS mit 2 Gleidchungen und 3 Unbekannten $\rightarrow$ unendlich viele Lösungen
     \end{itemize}
 \end{frame}
 
